- The tip of the day form now does not show up when going fullscreen.
- Panel resizers now hide when there's nothing to resize.
- Fixed a mulitple struct definition after ; detection bug.
- Tidied up editor options.
- Moved to a more recent SynEdit component.
- Symbol completion is faster and has more options now.
- Added a console pausing option to Environment options.

Version 5.1.1.0 - 16 Februari 2012

- Added code folding.
- A few directory checks now use absolute paths instead of relative ones.
- Added a few 32bit/64bit items to the FAQ.
- Fixed the Help Menu Item not always working.
- Added a few translations (translated by cin.getline).
- Merged all new toolbar buttons to one 'master' button.
- The class browser toolbar now sizes its dropdown menu to make its content fit.
- Dev-C++ now uses Segoe UI 9pt as a default when it's installed.
- Updated the statusbar and the toolbars.
- Fixed a class browsing crash when not using a project.
- And more minor things.
- Fixed a crash when saving logs when no project is opened.
- Fixed a lot of memory leaks.
- Inserting classes and variables is faster now.
- Code folding now automatically updates when creating new files from templates.
- Fixed some more memory leaks. Folding doesn't leak anymore now.

Version 5.1.0.0 - 27 December 2011

- This is the first version to fully support 64bit MinGW compilers! Just place one in a folder called 'MinGW64' next to devcpp.exe, Dev will automatically adapt itself to it!
- When launching for the first time, Dev-C++ will set defaults based on available 32bit or 64bit compilers (favors 64bit). 
- The XP style manifest creator now also supports 64bit.
- The "Delete Profiling Information" button now does not check for the gmon.out file 60 times a second to keep itself updated.
- Compiler information in the log now does not show up twice when rebuilding a single file.
- Project files with dots in their names now do not confuse the executable namer anymore.