@@ -380,6 +380,7 @@ const
   ID_EOPT_CPSYMBOLS                 = 24005;
 
     // General Tab Items
+  ID_EOPT_SAVESYNTAXQUESTION        = 25001;
   ID_EOPT_EDOPTIONS                 = 25002;
   ID_EOPT_AUTOINDENT                = 25003;
   ID_EOPT_INSERTMODE                = 25004;
@@ -411,6 +412,7 @@ const
   ID_EOPT_CARET3                    = 25030;
   ID_EOPT_CARET4                    = 25031;
   ID_EOPT_HIGHCURLINE               = 25032;
+  ID_EOPT_TRIMTRAILINGSPACES        = 25033;
 
   ID_EOPT_SPECIALCHARS              = 26001;
   ID_EOPT_PARSERHINTS               = 26002;
@@ -421,8 +423,7 @@ const
   ID_EOPT_HINTWHITESPACE            = 26007;
   ID_EOPT_CLOSEBRACE                = 26008;
 
-
-    // Display Tab
+  // Display Tab
   ID_EOPT_CTRLSCROLLHINT            = 26009;
   ID_EOPT_EDFONT                    = 26010;
   ID_EOPT_FONT                      = 26011;
@@ -446,7 +447,7 @@ const
   ID_EOPT_SPEED                     = 26027;
   ID_EOPT_ELEMENTS                  = 26028;
   ID_EOPT_SAVESYNTAX                = 26029;
-  ID_EOPT_SAVESYNTAXQUESTION        = 25001;
+
 
     // Code Tab -- Inserts
   ID_EOPT_CICODE                    = 26030;
@@ -476,6 +477,9 @@ const
   ID_EOPT_SAVEALLFILES              = 26049;
   ID_EOPT_SAVEONLYOPENFILE          = 26040;
 
+  ID_NP                             = 26050;
+  ID_NP_DESC                        = 26051;
+
   ID_EOPT_SYMBOLCOMPLETE            = 26052;
   ID_EOPT_SYMBOLGROUP               = 26053;
   ID_EOPT_SYMBOLBRACES              = 26054;
@@ -485,8 +489,6 @@ const
   ID_EOPT_SYMBOLCOMMENT             = 26058;
 
   // new project
-  ID_NP                             = 26050;
-  ID_NP_DESC                        = 26051;
   ID_NP_PRJNAME                     = 27001;
   ID_NP_DEFAULTC                    = 27002;
   ID_NP_DEFAULTCPP                  = 27003;
